correction size and align box social on mobile

--- a/_sass/contato.scss
+++ b/_sass/contato.scss
@@ -183,6 +183,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
+      position: fixed;
       & > div:first-child{
           width: 60%;
       }
@@ -190,3 +191,11 @@
           width: 40%;
       }
   }
+
+  @media screen and (min-width: 319px) and (max-width: 719px){
+    .flex-contato {
+        flex-direction: column;
+        & > div:last-child, .flex-contato div:first-child{
+            width: 100%;
+        }
+    }
