--- a/_sass/gridpak.scss
+++ b/_sass/gridpak.scss
@@ -204,8 +204,8 @@
   .span_8 {
       width:66.6666666667%;
   }
-  .span_8-sobre {
-      width:66.6666666667%;
+  .span_10-sobre {
+      width:83.3333333333%;
   }
   .span_9 {
       width:75.0%;
