--- a/_sass/sobre.scss
+++ b/_sass/sobre.scss
@@ -2,6 +2,7 @@
   .sobre{
     width: 100%;
     height: 100%;
+    margin-top: 70px;
     display: flex;
     justify-content:center;
     flex-direction: column;
@@ -15,6 +16,10 @@
     }
   }
 
+  @media screen and (min-width: 319px) and (max-width: 719px){
+      .sobre{margin-top:0;}
+  }
+
   .flex-center{
       display: flex;
       align-items: center;
@@ -22,12 +27,22 @@
       flex-direction: column;
   }
 
-  .perfil img{
-    width:100%;
-    border-radius: 50%;
-    border: $blueColor 4px solid;
-    margin-bottom: 10px;
-  }
+.perfil {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    img{
+        width:100%;
+        border-radius: 50%;
+        border: $blueColor 4px solid;
+        margin-bottom: 20px;
+    }
+    p{
+        text-align: center;
+        margin-bottom: 10px;
+    }
+}
 
   .txtWhite{
     color: white;
@@ -38,11 +53,18 @@
     height: 330px;
     width: 80px;
     padding: 10px;
-    margin-top: 56px;
+    margin-top: 10px;
     display: flex;
     border-radius: 200px;
     flex-direction: column;
     justify-content:space-around;
+  }
+
+  @media screen and (min-width: 319px) and (max-width: 719px){
+    .box-social-icon{
+        height: auto;
+        width: 100%;
+    }
   }
 
   .flex-item{
@@ -77,7 +99,7 @@
 	width: 200%;
 	position: relative;
 	left: 50%;
-	transition: all 600ms cubic-bezier(0, 0.29, 0.18, 1.01);
+	transition: all 600ms cubic-bezier(.33,.01,0,1.01);
 }
 
 .slide-sobre{
