--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -87,7 +87,7 @@ body {
 
 //ESTRUTURA CONTEUDO
   section{
-    padding: 100px 0;
+    padding: 50px 0;
   }
 
   button{
